--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
+set(CMAKE_C_COMPILER /usr/local/bin/gcc-13)
+set(CMAKE_CXX_COMPILER /usr/local/bin/g++-13)
+set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -fopenmp")
+
 
 project(CXRIS)
 
